...
      <Input
        onChangeText={text => setNewPostName(text)}
        value={newPostName}
        placeholder='New Post Name'
        accessibilityLabel='New Post Name'
        flex={1}
        testID='new-post-name'
        onSubmitEditing={createPost}
      />
      <Button onPress={createPost} testID="new-post-submit">Add</Button>
    </XStack>
    ) : (
      <YStack gap="$4" ai="center">
        <H3>
          Free Limit Reached
        </H3>
...
